# realworld-frontend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yaml  release.yml
k8s/: kustomization.yaml  realworld-frontend.yaml
realworld-backend-client/: Cargo.toml  openapi_axum.json
realworld-backend-client/examples/: user_api.rs
realworld-backend-client/src/: lib.rs
realworld-backend-client/src/apis/: configuration.rs  mod.rs  user_api.rs
realworld-backend-client/src/models/: conflict.rs  credentials.rs  errors.rs  generic_error.rs  generic_error_body.rs  login_request.rs  mod.rs  new_user.rs  register_user_request.rs  unprocessable_entity.rs  update_user.rs  update_user_request.rs  user.rs  user_response.rs
realworld-frontend/: Cargo.toml  Dioxus.toml  index.html
realworld-frontend/config/: default.yaml
realworld-frontend/src/: app.rs  lib.rs  main.rs  server.rs
realworld-frontend/src/app/: mod.rs
realworld-frontend/src/app/page/: mod.rs
realworld-frontend/src/component/: navbar.rs
realworld-frontend/src/page/: home.rs  login.rs  mod.rs  not_found.rs  register.rs
