[workspace]
members  = [ "realworld-backend-client", "realworld-frontend" ]
resolver = "2"

[workspace.package]
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/realworld-frontend"
repository    = "https://github.com/hseeberger/realworld-frontend"
documentation = "https://github.com/hseeberger/realworld-frontend"
publish       = false

[workspace.dependencies]
anyhow                   = { version = "1.0", features = [ "backtrace" ] }
console_error_panic_hook = { version = "0.1" }
dioxus                   = { version = "0.4" }
dioxus-logger            = { version = "0.4" }
dioxus-router            = { version = "0.4" }
dioxus-web               = { version = "0.4" }
log                      = { version = "0.4" }
reqwest                  = { version = "0.11", features = [ "json", "multipart" ] }
serde                    = { version = "1.0", features = [ "derive" ] }
serde_json               = { version = "1.0" }
tokio                    = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
url                      = { version = "2.4", features = [ "serde" ] }
