[workspace]
members  = [ "realworld-backend-client", "realworld-frontend" ]
resolver = "2"

[workspace.package]
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/realworld-frontend"
repository    = "https://github.com/hseeberger/realworld-frontend"
documentation = "https://github.com/hseeberger/realworld-frontend"
publish       = false

[workspace.dependencies]
anyhow                   = { version = "1.0", features = [ "backtrace" ] }
axum                     = { version = "0.6", features = [ "http2" ] }
console_error_panic_hook = { version = "0.1" }
console_log              = { version = "1.0" }
leptos                   = { version = "0.5", features = [ "nightly" ] }
leptos_axum              = { version = "0.5" }
leptos_meta              = { version = "0.5", features = [ "nightly" ] }
leptos_router            = { version = "0.5", features = [ "nightly" ] }
log                      = { version = "0.4" }
reqwest                  = { version = "0.11", features = [ "json", "multipart" ] }
serde                    = { version = "1.0", features = [ "derive" ] }
serde_json               = { version = "1.0" }
serde_with               = { version = "3.7" }
time                     = { version = "0.3", features = [ "formatting", "parsing", "serde" ] }
tokio                    = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tower                    = { version = "0.4" }
tower-http               = { version = "0.4", features = [ "fs", "trace" ] }
tracing                  = { version = "0.1", default-features = false }
tracing-subscriber       = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
url                      = { version = "2.5", features = [ "serde" ] }
wasm-bindgen             = { version = "0.2" }

[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
