[package]
name          = "realworld-backend-client"
description   = "Client for RealWorld backend implementation in Rust."
version       = "0.1.2"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
url        = { workspace = true }
