[package]
name          = "realworld-frontend"
description   = "RealWorld frontend implementation in Rust"
version       = "0.1.0"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
realworld-backend-client = { path = "../realworld-backend-client" }
anyhow                   = { workspace = true }
axum                     = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true }
console_log              = { workspace = true }
leptos                   = { workspace = true }
leptos_axum              = { workspace = true, optional = true }
leptos_meta              = { workspace = true }
leptos_router            = { workspace = true }
log                      = { workspace = true }
reqwest                  = { workspace = true }
serde_json               = { workspace = true, optional = true }
time                     = { workspace = true, optional = true }
tokio                    = { workspace = true, optional = true }
tower                    = { workspace = true, optional = true }
tower-http               = { workspace = true, optional = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true, optional = true }

wasm-bindgen = "=0.2.88"
http         = "1.0.0"

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:serde_json",
    "dep:time",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing-subscriber",
]

[package.metadata.leptos]
assets-dir          = "public"
bin-features        = [ "ssr" ]
lib-features        = [ "hydrate" ]
lib-profile-release = "wasm-release"
